@@ -1,6 +1,8 @@
 2006-02-08  Ales Hakl  <ales at hakl dot net>
 
 	* src/strings.c (dfsch_string_length): Return length of list
+	(dfsch__string_native_register): Full set of string comparison
+	predicates
 
 2006-02-07  Ales Hakl  <ales at hakl dot net>
 
